# Projeto-Final-Python

./: README.md  alembic.ini  banco_dados.py  main.py  pyproject.toml  requirements.txt
controllers/: BaseController.py  BrandController.py  CategoryController.py  MovementController.py  ProductController.py  StockController.py  SupplierController.py  UserController.py
migrations/: env.py
migrations/versions/: 680282f95956_migration_0.py  89a59c4431d9_migration_2_add_photo_column_to_product.py  afd6dac4b156_migration_1_add_movement.py  e569c16f19dd_migration_0.py
models/: BaseEntity.py  Brand.py  Category.py  Movement.py  Product.py  Stock.py  Supplier.py  User.py  UserAuthentication.py
models/Enums/: TypeAccess.py  TypeAcess.py  TypeSearch.py
models/Repository/: BaseRepository.py  BrandRepository.py  CategoryRepository.py  MovementRepository.py  ProductRepository.py  StockRepository.py  SupplierRepository.py  UserRepository.py
view/: app.py  cadastrarProduct_old.py  description_old.py  editProduct_old.py  fornecedores_old.py  loginView_old.py  login_old.py  login_old_old.py  registerLogin_old.py  registerProduct_old.py  register_old.py  stock.py  stockApp.py
viewBootstrap/: description_product.py  insert_products.py  insert_supplier.py  insert_user.py  insert_user_old.py  menu_bootstrap_new.py  register2.py  register_product.py  register_product_old._old.py  register_product_old.py  search_test.py  stock.py  table.py
views/: LoginView.py  MainView.py  MenuView.py  RegistrationView.py  StockView.py  SupplierView.py  UserView.py  th001.py
(+25 files in other folders)
